--- a/lib/lp/translations/stories/translationgroups/45-test-distro-restricted-permissions.txt
+++ b/lib/lp/translations/stories/translationgroups/45-test-distro-restricted-permissions.txt
@@ -152,10 +152,8 @@ not yet translated.
     This translation is managed by <...No Privileges Person<...>, assigned by
     <...>The PolyGlot Translation Group<...>.
 
-    >>> print_tag_with_id(browser.contents, 'translation-access')
+    >>> print get_detail_tag(browser, 'translation-access')
     You have full access to this translation.
-    Working in reviewer mode.
-    Switch to translator mode.
 
     >>> print find_no_translation_marker(browser.contents)
     (no translation yet)
