--- a/lib/lp/translations/doc/poexport-request.txt
+++ b/lib/lp/translations/doc/poexport-request.txt
@@ -109,7 +109,7 @@ Let's download it and make sure the contents look ok.
     >>> tarball = string_to_tarfile(urllib2.urlopen(url).read())
     >>> for name in sorted(tarball.getnames()):
     ...   print name
-    pmount/
+    pmount
     pmount/pmount-ca.po
     pmount/pmount-cs.po
 
