--- a/lib/lp/translations/stories/standalone/xx-translation-access-display.txt
+++ b/lib/lp/translations/stories/standalone/xx-translation-access-display.txt
@@ -28,7 +28,7 @@ and reviewer working mode.
     >>> print_tag_with_id(
     ...     admin_browser.contents,
     ...     'translation-switch-working-mode')
-    Enter translator mode
+    You are in revier mode.
 
 == Displaying translation groups and reviewers ==
 
