--- a/lib/lp/translations/stories/importqueue/xx-translation-import-queue-edit-autofilling.txt
+++ b/lib/lp/translations/stories/importqueue/xx-translation-import-queue-edit-autofilling.txt
@@ -25,11 +25,13 @@ First, we need to feed the import queue.
   <div...Thank you for your upload. 2 files from the tarball...
 
 Let's check the values we get by default from the .pot file. The name field
-is empty.
+and the translation domain field are pre-filled from the name of the file.
 
   >>> browser.open('http://translations.launchpad.dev/+imports/4')
   >>> browser.getControl(name='field.name').value
-  ''
+  'test'
+  >>> browser.getControl(name='field.translation_domain').value
+  'test'
 
 But the path field has been preloaded with the value from the tar ball and
 the file type has been determined correctly from it.
