--- a/lib/lp/translations/stories/translationgroups/30-show-group-translation-targets.txt
+++ b/lib/lp/translations/stories/translationgroups/30-show-group-translation-targets.txt
@@ -26,6 +26,13 @@ If we disable some of these projects...
     >>> admin_browser.url
     'http://launchpad.dev/projectgroups'
 
+    # A product cannot be deactivated if it is linked to source packages.
+    >>> from lp.testing import unlink_source_packages
+    >>> from lp.registry.interfaces.product import IProductSet
+    >>> from zope.component import getUtility
+    >>> login('admin@canonical.com')
+    >>> unlink_source_packages(getUtility(IProductSet).getByName('netapplet'))
+    >>> logout()
     >>> admin_browser.open("http://launchpad.dev/netapplet/+admin")
     >>> admin_browser.getControl("Active").click()
     >>> admin_browser.getControl("Change").click()
