--- a/lib/lp/translations/browser/tests/language-views.txt
+++ b/lib/lp/translations/browser/tests/language-views.txt
@@ -106,7 +106,7 @@ formula expression to see how it works.
     1 : 2, 3, 4, 22, 23, 24...
     2 : 0, 5, 6, 7, 8, 9...
 
-The top contributors are listed on the language page, and for merged account
+The top contributors are listed on the language page, and for a merged account
 we will see their targed account.
 
 Create some translators and a merged account.
@@ -168,6 +168,7 @@ according to their karma value.
 In the end, the changes done to Language class are reverted.
 
     >>> Language.translators = translators_method
+
 
 View LanguageSet
 ------------------
