--- a/lib/lp/translations/stories/standalone/custom-language-codes.txt
+++ b/lib/lp/translations/stories/standalone/custom-language-codes.txt
@@ -35,12 +35,13 @@ package.
     >>> logout()
 
     >>> owner_browser = setupBrowser("Basic o@example.com:test")
+    >>> rosetta_admin_browser = setupRosettaExpertBrowser()
 
 An administrator sees the link to the custom language codes on a
 project's main translations page.
 
-    >>> admin_browser.open(product_page)
-    >>> tag = find_custom_language_codes_link(admin_browser)
+    >>> rosetta_admin_browser.open(product_page)
+    >>> tag = find_custom_language_codes_link(rosetta_admin_browser)
     >>> print extract_text(tag.renderContents())
     If necessary, you may
     define custom language codes
@@ -48,8 +49,8 @@ project's main translations page.
 
 The link goes to the custom language codes management page.
 
-    >>> admin_browser.getLink("define custom language codes").click()
-    >>> custom_language_codes_page = admin_browser.url
+    >>> rosetta_admin_browser.getLink("define custom language codes").click()
+    >>> custom_language_codes_page = rosetta_admin_browser.url
 
 Non-admins, even the project's owner, don't see this link.  We do not
 advertise this feature, since the proper solution is generally to use
@@ -61,26 +62,26 @@ the right language codes.
 
 Initially the page shows no custom language codes for the project.
 
-    >>> tag = find_tag_by_id(admin_browser.contents, 'empty')
+    >>> tag = find_tag_by_id(rosetta_admin_browser.contents, 'empty')
     >>> print extract_text(tag.renderContents())
     No custom language codes have been defined.
 
 The admin can add a custom language code.
 
-    >>> admin_browser.getLink("Add a custom language code").click()
-    >>> add_page = admin_browser.url
+    >>> rosetta_admin_browser.getLink("Add a custom language code").click()
+    >>> add_page = rosetta_admin_browser.url
 
-    >>> admin_browser.getControl("Language code:").value = 'no'
-    >>> admin_browser.getControl("Language:").value = ['nn']
-    >>> admin_browser.getControl("Add").click()
+    >>> rosetta_admin_browser.getControl("Language code:").value = 'no'
+    >>> rosetta_admin_browser.getControl("Language:").value = ['nn']
+    >>> rosetta_admin_browser.getControl("Add").click()
 
 This leads back to the custom language codes overview, where the new
 code is now shown.
 
-    >>> admin_browser.url == custom_language_codes_page
+    >>> rosetta_admin_browser.url == custom_language_codes_page
     True
 
-    >>> tag = find_tag_by_id(admin_browser.contents, 'nonempty')
+    >>> tag = find_tag_by_id(rosetta_admin_browser.contents, 'nonempty')
     >>> print extract_text(tag.renderContents())
     Foo uses the following custom language codes:
     Code...     ...maps to language
@@ -89,8 +90,8 @@ code is now shown.
 There is an overview page for the custom code, though there's not much
 to see there.
 
-    >>> admin_browser.getLink("no").click()
-    >>> main = find_main_content(admin_browser.contents)
+    >>> rosetta_admin_browser.getLink("no").click()
+    >>> main = find_main_content(rosetta_admin_browser.contents)
     >>> print extract_text(main.renderContents())
     Foo Translations Custom language code ...no...
     For Foo, uploads with the language code
@@ -102,26 +103,26 @@ to see there.
 
 The overview page leads back to the custom language codes overview.
 
-    >>> code_page = admin_browser.url
-    >>> admin_browser.getLink("custom language codes overview").click()
-    >>> admin_browser.url == custom_language_codes_page
+    >>> code_page = rosetta_admin_browser.url
+    >>> rosetta_admin_browser.getLink("custom language codes overview").click()
+    >>> rosetta_admin_browser.url == custom_language_codes_page
     True
 
-    >>> admin_browser.open(code_page)
+    >>> rosetta_admin_browser.open(code_page)
 
 There is also a link for removing codes.  The admin follows the link and
 removes the "no" custom language code.
 
-    >>> admin_browser.getLink("remove custom language code").click()
-    >>> remove_page = admin_browser.url
-    >>> admin_browser.getControl("Remove").click()
+    >>> rosetta_admin_browser.getLink("remove custom language code").click()
+    >>> remove_page = rosetta_admin_browser.url
+    >>> rosetta_admin_browser.getControl("Remove").click()
 
 This leads back to the overview page.
 
-    >>> admin_browser.url == custom_language_codes_page
+    >>> rosetta_admin_browser.url == custom_language_codes_page
     True
 
-    >>> tag = find_tag_by_id(admin_browser.contents, 'empty')
+    >>> tag = find_tag_by_id(rosetta_admin_browser.contents, 'empty')
     >>> print extract_text(tag.renderContents())
     No custom language codes have been defined.
 
@@ -155,10 +156,10 @@ The page for adding custom language codes is not accessible to them.
 And naturally, if an admin creates a custom language code again, a
 non-admin can't remove it.
 
-    >>> admin_browser.open(add_page)
-    >>> admin_browser.getControl("Language code:").value = 'no'
-    >>> admin_browser.getControl("Language:").value = ['nn']
-    >>> admin_browser.getControl("Add").click()
+    >>> rosetta_admin_browser.open(add_page)
+    >>> rosetta_admin_browser.getControl("Language code:").value = 'no'
+    >>> rosetta_admin_browser.getControl("Language:").value = ['nn']
+    >>> rosetta_admin_browser.getControl("Add").click()
 
     >>> owner_browser.open(custom_language_codes_page)
     >>> tag = find_tag_by_id(owner_browser.contents, 'nonempty')
@@ -210,36 +211,36 @@ shown on the source package page.
     ...     rootsite="translations")
     >>> logout()
 
-    >>> admin_browser.open(package_page)
+    >>> rosetta_admin_browser.open(package_page)
 
 Of course in this case, the notice about there being no custom language
 codes talks about a package, not a project.
 
-    >>> tag = find_custom_language_codes_link(admin_browser)
+    >>> tag = find_custom_language_codes_link(rosetta_admin_browser)
     >>> print extract_text(tag.renderContents())
     If necessary, you may
     define custom language codes
     for this package.
 
-    >>> admin_browser.getLink("define custom language codes").click()
-    >>> custom_language_codes_page = admin_browser.url
+    >>> rosetta_admin_browser.getLink("define custom language codes").click()
+    >>> custom_language_codes_page = rosetta_admin_browser.url
 
-    >>> tag = find_tag_by_id(admin_browser.contents, 'empty')
+    >>> tag = find_tag_by_id(rosetta_admin_browser.contents, 'empty')
     >>> print extract_text(tag.renderContents())
     No custom language codes have been defined.
 
 Again, an admin can add a language code.
 
-    >>> admin_browser.getLink("Add a custom language code").click()
-    >>> add_page = admin_browser.url
+    >>> rosetta_admin_browser.getLink("Add a custom language code").click()
+    >>> add_page = rosetta_admin_browser.url
 
-    >>> admin_browser.getControl("Language code:").value = 'pt-br'
-    >>> admin_browser.getControl("Language:").value = ['pt_BR']
-    >>> admin_browser.getControl("Add").click()
+    >>> rosetta_admin_browser.getControl("Language code:").value = 'pt-br'
+    >>> rosetta_admin_browser.getControl("Language:").value = ['pt_BR']
+    >>> rosetta_admin_browser.getControl("Add").click()
 
 The language code is displayed.
 
-    >>> tag = find_tag_by_id(admin_browser.contents, 'nonempty')
+    >>> tag = find_tag_by_id(rosetta_admin_browser.contents, 'nonempty')
     >>> print extract_text(tag.renderContents())
     bar in distro uses the following custom language codes:
     Code...     ...maps to language
@@ -248,15 +249,15 @@ The language code is displayed.
 It's also displayed identically on the same package but in another
 release series of the same distribution.
 
-    >>> admin_browser.open(page_in_other_series)
-    >>> tag = find_custom_language_codes_link(admin_browser)
+    >>> rosetta_admin_browser.open(page_in_other_series)
+    >>> tag = find_custom_language_codes_link(rosetta_admin_browser)
     >>> print extract_text(tag.renderContents())
     If necessary, you may
     define custom language codes
     for this package.
 
-    >>> admin_browser.getLink("define custom language codes").click()
-    >>> tag = find_tag_by_id(admin_browser.contents, 'nonempty')
+    >>> rosetta_admin_browser.getLink("define custom language codes").click()
+    >>> tag = find_tag_by_id(rosetta_admin_browser.contents, 'nonempty')
     >>> print extract_text(tag.renderContents())
     bar in distro uses the following custom language codes:
     Code...     ...maps to language
@@ -265,13 +266,13 @@ release series of the same distribution.
 
 The new code has a link there...
 
-    >>> admin_browser.getLink("pt-br").click()
+    >>> rosetta_admin_browser.getLink("pt-br").click()
 
 ...and can be deleted.
 
-    >>> admin_browser.getLink("remove custom language code").click()
-    >>> admin_browser.getControl("Remove").click()
+    >>> rosetta_admin_browser.getLink("remove custom language code").click()
+    >>> rosetta_admin_browser.getControl("Remove").click()
 
-    >>> tag = find_tag_by_id(admin_browser.contents, 'empty')
+    >>> tag = find_tag_by_id(rosetta_admin_browser.contents, 'empty')
     >>> print extract_text(tag.renderContents())
     No custom language codes have been defined.
