--- a/lib/lp/translations/doc/poexport-request-productseries.txt
+++ b/lib/lp/translations/doc/poexport-request-productseries.txt
@@ -90,7 +90,8 @@ Let's download it and make sure the contents look ok.
     >>> from canonical.launchpad.helpers import string_to_tarfile
     >>> tarball = string_to_tarfile(urllib2.urlopen(url).read())
     >>> for name in sorted(tarball.getnames()):
-    ...   print name
+    ...   # XXX: The .rstrip('/') is to make this pass on python2.5 and 2.6.
+    ...   print name.rstrip('/')
     evolution-2.2
     evolution-2.2/evolution-2.2-es.po
     po
