--- a/lib/lp/translations/doc/potemplate.txt
+++ b/lib/lp/translations/doc/potemplate.txt
@@ -619,7 +619,9 @@ Inspecting the tarball content, we have the list of entries exported.
     >>> from canonical.launchpad.helpers import string_to_tarfile
     >>> tarfile_string = exported_translation_file.read()
     >>> tarfile = string_to_tarfile(tarfile_string)
-    >>> sorted(tarfile.getnames())
+
+    # XXX: The .rstrip('/') is to make this pass on python2.5 and 2.6.
+    >>> sorted(name.rstrip('/') for name in tarfile.getnames())
     ['evolution-2.2', 'evolution-2.2/evolution-2.2-es.po',
      'evolution-2.2/evolution-2.2-ja.po', 'evolution-2.2/evolution-2.2-xh.po',
      'po', 'po/evolution-2.2.pot']
