--- a/lib/lp/translations/utilities/doc/gettext_mo_exporter.txt
+++ b/lib/lp/translations/utilities/doc/gettext_mo_exporter.txt
@@ -79,13 +79,13 @@ When we export more than one file, we get a tarball.
     ...         lines = len(tarfile.extractfile(member).readlines())
     ...     else:
     ...         lines = 0
-    ...     print "| %5d | %s" % (lines, member.name +
-    ...                           ("/" if member.isdir() else ""))
-    |     0 | es/
-    |     0 | es/LC_MESSAGES/
+    ...     # XXX: The .rstrip('/') is to make this pass on python2.5 and 2.6.
+    ...     print "| %5d | %s" % (lines, member.name.rstrip('/'))
+    |     0 | es
+    |     0 | es/LC_MESSAGES
     |    12 | es/LC_MESSAGES/foo.mo
-    |     0 | sr/
-    |     0 | sr/LC_MESSAGES/
+    |     0 | sr
+    |     0 | sr/LC_MESSAGES
     |    12 | sr/LC_MESSAGES/foo.mo
 
 
